--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.039/juliamono-regular.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
+<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.044/juliamono.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
 Pkg.add(&quot;GraphPlot&quot;)</code></pre><p>Then bring <code>GraphPlot</code> in before DFG:</p><pre><code class="language-julia hljs">using GraphPlot
 using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="../func_ref/#DistributedFactorGraphs.DFGPlots.plotDFG"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
 using IncrementalInference
@@ -24,94 +24,94 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-04403884">
+     id="img-7ec2508b">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-04403884-1">
-  <g transform="translate(83.96,43.81)">
-    <path fill="none" d="M8.27,19.68 L-8.27,-19.68 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-7ec2508b-1">
+  <g transform="translate(115.93,47.72)">
+    <path fill="none" d="M-12.66,-11.08 L12.66,11.08 " class="primitive"/>
   </g>
-  <g transform="translate(74.96,80.44)">
-    <path fill="none" d="M14.89,-10.4 L-14.89,10.4 " class="primitive"/>
+  <g transform="translate(66.14,40.08)">
+    <path fill="none" d="M28.27,-5.46 L-28.27,5.46 " class="primitive"/>
   </g>
-  <g transform="translate(113.45,74.55)">
-    <path fill="none" d="M-14.71,-5.45 L14.71,5.45 " class="primitive"/>
+  <g transform="translate(111.87,19.79)">
+    <path fill="none" d="M-9.16,10.45 L9.16,-10.45 " class="primitive"/>
   </g>
-  <g transform="translate(24.6,23.73)">
-    <path fill="none" d="M11.87,-12.16 L-11.87,12.16 " class="primitive"/>
+  <g transform="translate(77.46,88.69)">
+    <path fill="none" d="M26.92,-2.8 L-26.92,2.8 " class="primitive"/>
   </g>
-  <g transform="translate(59.11,16.36)">
-    <path fill="none" d="M-14.66,-6.05 L14.66,6.05 " class="primitive"/>
+  <g transform="translate(120.7,71.31)">
+    <path fill="none" d="M-8.14,10.55 L8.14,-10.55 " class="primitive"/>
   </g>
-  <g transform="translate(16.83,57.13)">
-    <path fill="none" d="M4.76,19.11 L-4.76,-19.11 " class="primitive"/>
+  <g transform="translate(31.86,82.06)">
+    <path fill="none" d="M-15.72,-8.87 L15.72,8.87 " class="primitive"/>
   </g>
-  <g transform="translate(42.5,86.46)">
-    <path fill="none" d="M-14.86,-4.72 L14.86,4.72 " class="primitive"/>
+  <g transform="translate(25.13,57.17)">
+    <path fill="none" d="M-10.17,10.34 L10.17,-10.34 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-04403884-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-7ec2508b-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-04403884-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-7ec2508b-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-04403884-4">
-  <g transform="translate(93.81,67.27)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-7ec2508b-4">
+  <g transform="translate(99.78,33.58)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(39.64,8.33)" fill="#2E8B57">
+  <g transform="translate(109.89,85.31)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(22.56,80.12)" fill="#2E8B57">
+  <g transform="translate(11.79,70.74)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,36.86)" fill="#00CDCD">
+  <g transform="translate(48.89,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(75.22,23)" fill="#00CDCD">
+  <g transform="translate(129.64,59.73)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(58.88,91.67)" fill="#00CDCD">
+  <g transform="translate(36.26,45.86)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,80.55)" fill="#00CDCD">
+  <g transform="translate(121.91,8.33)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-04403884-5">
-  <g transform="translate(93.81,67.27)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-7ec2508b-5">
+  <g transform="translate(99.78,33.58)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(39.64,8.33)">
+  <g transform="translate(109.89,85.31)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(22.56,80.12)">
+  <g transform="translate(11.79,70.74)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(11.79,36.86)">
+  <g transform="translate(48.89,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(75.22,23)">
+  <g transform="translate(129.64,59.73)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(58.88,91.67)">
+  <g transform="translate(36.26,45.86)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,80.55)">
+  <g transform="translate(121.91,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -299,4 +299,4 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:659
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.15 on <span class="colophon-date" title="Wednesday 13 April 2022 02:24">Wednesday 13 April 2022</span>. Using Julia version 1.7.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.16 on <span class="colophon-date" title="Wednesday 20 April 2022 05:03">Wednesday 20 April 2022</span>. Using Julia version 1.7.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
