--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.044/juliamono.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
+<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.045/juliamono.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.24/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
 Pkg.add(&quot;GraphPlot&quot;)</code></pre><p>Then bring <code>GraphPlot</code> in before DFG:</p><pre><code class="language-julia hljs">using GraphPlot
 using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="../func_ref/#DistributedFactorGraphs.DFGPlots.plotDFG"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
 using IncrementalInference
@@ -24,94 +24,94 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-9f107351">
+     id="img-5bbd69a5">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-9f107351-1">
-  <g transform="translate(90.69,50.68)">
-    <path fill="none" d="M3.13,-16.89 L-3.13,16.89 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-5bbd69a5-1">
+  <g transform="translate(28.89,49.6)">
+    <path fill="none" d="M8.28,-12.1 L-8.28,12.1 " class="primitive"/>
   </g>
-  <g transform="translate(69.5,26.62)">
-    <path fill="none" d="M19.57,2.55 L-19.57,-2.55 " class="primitive"/>
+  <g transform="translate(71.53,38.43)">
+    <path fill="none" d="M-26.47,-3.71 L26.47,3.71 " class="primitive"/>
   </g>
-  <g transform="translate(113.56,18.21)">
-    <path fill="none" d="M-14.81,9.1 L14.81,-9.1 " class="primitive"/>
+  <g transform="translate(24.5,20.05)">
+    <path fill="none" d="M11.7,10.78 L-11.7,-10.78 " class="primitive"/>
   </g>
-  <g transform="translate(31.05,85.31)">
-    <path fill="none" d="M16.58,4.85 L-16.58,-4.85 " class="primitive"/>
+  <g transform="translate(76.04,90.45)">
+    <path fill="none" d="M-24.48,-1.13 L24.48,1.13 " class="primitive"/>
   </g>
-  <g transform="translate(71.48,79.26)">
-    <path fill="none" d="M-14.65,9.71 L14.65,-9.71 " class="primitive"/>
+  <g transform="translate(31.82,74.78)">
+    <path fill="none" d="M10.98,11.06 L-10.98,-11.06 " class="primitive"/>
   </g>
-  <g transform="translate(12.4,63.68)">
-    <path fill="none" d="M-0.49,-15.15 L0.49,15.15 " class="primitive"/>
+  <g transform="translate(114.69,80.77)">
+    <path fill="none" d="M11.44,-9.97 L-11.44,9.97 " class="primitive"/>
   </g>
-  <g transform="translate(31.56,33.36)">
-    <path fill="none" d="M-15.43,8.76 L15.43,-8.76 " class="primitive"/>
+  <g transform="translate(113.39,54)">
+    <path fill="none" d="M12.68,10.72 L-12.68,-10.72 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-9f107351-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-5bbd69a5-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-9f107351-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-5bbd69a5-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-9f107351-4">
-  <g transform="translate(94.55,29.88)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-5bbd69a5-4">
+  <g transform="translate(39.6,33.95)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(52.77,91.67)" fill="#2E8B57">
+  <g transform="translate(46,89.06)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,44.59)" fill="#2E8B57">
+  <g transform="translate(129.64,67.74)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(12.93,80.01)" fill="#00CDCD">
+  <g transform="translate(102.19,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(87.35,68.74)" fill="#00CDCD">
+  <g transform="translate(19.88,62.76)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(48.29,23.86)" fill="#00CDCD">
+  <g transform="translate(99.64,42.37)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(11.79,8.33)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-9f107351-5">
-  <g transform="translate(94.55,29.88)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-5bbd69a5-5">
+  <g transform="translate(39.6,33.95)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(52.77,91.67)">
+  <g transform="translate(46,89.06)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(11.79,44.59)">
+  <g transform="translate(129.64,67.74)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(12.93,80.01)">
+  <g transform="translate(102.19,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(87.35,68.74)">
+  <g transform="translate(19.88,62.76)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(48.29,23.86)">
+  <g transform="translate(99.64,42.37)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(11.79,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -299,4 +299,4 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:659
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 6 June 2022 16:19">Monday 6 June 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.21 on <span class="colophon-date" title="Friday 15 July 2022 05:43">Friday 15 July 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
